# fastapi-template

./: .dockerignore  .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.MD  alembic.ini  config.docker.yaml  config.test.yaml  config.yaml  docker-compose.yml  pyproject.toml  setup.sh
alembic/: env.py
alembic/versions/: f1f58c57cbaf_create_users_table.py
deploy/: docker-compose.yaml  init_db.sh  init_db.sql
docs/: clients.md  database_migrations.md  fastapi.md  new_feature_workflow.md  schemas.md  sqlalchemy.md
src/backend/: config.py  dependencies.py  schemas.py  server.py  server_example.py
src/backend/db/: __init__.py  db.py  init_db.py  mixins.py
src/backend/db/models/: user.py
src/backend/users/: exceptions.py  repository.py  routes.py  schemas.py  service.py
templates/: home.html
tests/: conftest.py
