[project]
name = "backend"
version = "0.1.0"
description = "A repo where I try fronted + backend integration"
authors = [
    { name = "Oscar Pindaro", email = "oscar@shopcircle.co" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.uv_build]
packages = [
  { include = "backend", from = "src" },
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
